@@ -3,6 +3,8 @@ Changelog
 
 3.9-dev0 - (unreleased)
 ---------------------------
+* fix import error on older python versions
+  [valipod refs #140578]
 * Bug fix: replace encodestring by encodebytes for py3.9 compatibility
   [valipod refs #140578]
 
